--- a/master.css
+++ b/master.css
@@ -57,7 +57,7 @@ body {
 #controls .right-btns > .btn.active {
 	margin       : 1px;
 	border-width : 3px;
-	box-shadow   : 0px 0px 10px #000000;
+	box-shadow   : 0px 0px 25px #000000;
 }
 
 #controls .colors {
@@ -82,12 +82,22 @@ body {
 }
 
 #sidebar {
-	position: fixed;
-	left   : 0px;
-	top    : 0px;
-	bottom : 0px;
-	width  : 50%;
+	position       : fixed;
+	left           : 0px;
+	top            : 0px;
+	bottom         : 0px;
+	width          : 50%;
+	padding-top    : 4em;
+	padding-bottom : 4em;
 	box-shadow: 5px 0px 50px #29292963;
 	background-color: #ffffffbf;
 	border-right: 2px solid #a4a4a4;
+	overflow: auto;
+}
+#sidebar > .col-12 > h5 {
+	margin-bottom: -3px;
+}
+#sidebar input {
+	outline: none;
+	box-shadow: none;
 }
